# AoC

./: Cargo.toml  README.md
2020/day1/: Cargo.toml
2020/day1/src/: main.rs
2020/day2/: Cargo.toml
2020/day2/src/: main.rs
2020/rust/: Cargo.toml
2022/day1/: README.md
2022/day1/src/: main.rs
2022/day3/: README.md
2022/day3/src/: main.rs
2022/day4/: README.md
2022/day4/src/: main.rs
2022/day5/src/: main.rs
2022/day6/: README
2022/day7/: README
2022/day7/src/: main.rs
2022/rust/: Cargo.toml
2022/rust/day11/: README.md
2023/rust/: Cargo.toml
2024/rust/: Cargo.toml
2025/rust/: Cargo.toml
day10_2022/: Cargo.toml
day10_2022/src/: main.rs
day11_2022/: Cargo.toml
day11_2022/src/: main.rs
day12_2022/: Cargo.toml
day12_2022/src/: main.rs
day13_2022/: Cargo.toml  README.md
day13_2022/src/: main.rs
day15_2022/src/: main.rs
day17_2022/: README.md
day17_2022/src/: main.rs
day19_2022/: Cargo.toml
day1_2020/: Cargo.toml  input.txt
day1_2020/src/: main.rs
day1_2022/src/: main.rs
day20_2022/: Cargo.toml  README.md
day20_2022/src/: main.rs
day21_2022/: README.md
day21_2022/src/: main.rs
day22_2022/: Cargo.toml
day22_2022/src/: main.rs
day24_2022/: README.md
day24_2022/src/: main.rs
day2_2020/: Cargo.toml
day2_2020/src/: main.rs
day2_2022/: README.md
day2_2022/src/: main.rs
day3_2022/src/: main.rs
day4_2022/src/: main.rs
day5_2022/src/: main.rs
day6_2022/src/: main.rs
day7_2022/: README
day8_2022/src/: main.rs
day9_2022/: README.md  log
day9_2022/src/: main.rs
(+75 files in other folders)
