[workspace]

members = [
    "day1_2020",
    "day2_2020",
    "day1_2022",
    "day2_2022",
    "day3_2022",
    "day4_2022",
    "day5_2022",
    "day6_2022",
    "day7_2022",
    "day8_2022",
    "day9_2022",
    "day10_2022",
    # "2022/day11",
    # "2022/day12",
    # "2022/day13",
    # "2022/day14",
    # "2022/day15",
    # "2022/day16",
    # "2022/day17",
    # "2022/day18",
    # "2022/day19",
    # "2022/day20",
    # "2022/day21",
    # "2022/day22",
    # "2022/day23",
    # "2022/day24",
]

[workspace.package]
authors = ["Philipp Degler"]
description = "My solution of the Advent of Code"
