[workspace]

members = [
    "day1_2020",
    "day2_2020",
    "day1_2022",
    "day2_2022",
    "day3_2022",
    "day4_2022",
    "day5_2022",
    "day6_2022",
    "day7_2022",
    "day8_2022",
    "day9_2022",
    "day10_2022",
    "day11_2022",
    "day12_2022",
    "day15_2022",
    "day16_2022",
    "day17_2022",
]

[workspace.package]
authors = ["Philipp Degler"]
description = "My solution of the Advent of Code"

[workspace.dependencies]
regex = "1"
rayon = "1"
